MAINT-2173  Add service implementation and tests